src/test/ui/parser/removed-syntax-closure-lifetime.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `:`, `<`, `=`, or `>`, found `/`
  --> $DIR/removed-syntax-closure-lifetime.rs:1:22
   |
LL | type closure = Box<lt/fn()>;
   |                      ^ expected one of 9 possible tokens

error: aborting due to previous error

